Added near-final Linux page, made some tweaks, got rid of garbage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigation bar -->
     <header id="HeaderLogo">
-        <a href="../index.html">
+        <a href="">
             <h1 id="navbarlogo">o‿OS</h1>
         </a>
     </header>
@@ -29,15 +29,12 @@
         </ul>
     </nav>
 
-    <h1>Project Krono‿OS</h1>
+    <h1 class="hidden">Project Krono‿OS</h1>
 
-    <div class="infobox">
+    <div class="infobox hidden">
         <p>Interactive Encyclopedia through the history of Personal Computer Operating Systems, touching on the three major players :<br>
         Microsoft Windows, Apple Mac OS and GNU/Linux.
-        </p>
-    </div>
-
-    <div class="infobox">
+        </p><br>
         <h2>MADE BY</h2>
         <ul>
             <li>GRAOUI Abderrahmane</li>
