Updated linux page to final version

--- a/linux/linux.html
+++ b/linux/linux.html
@@ -230,8 +230,61 @@
 			<img src="media/linuxfoundation.svg" alt="The Linux Foundation" class="media header" loading="lazy"/>
 			<div class="txtcontent one hidden">
 				<p><span class="usr">~$: </span>less chapter5</p><br>
-
 				<p>Despite Linux being free software, this didn't mean the developers working on it were doing it out of their own pockets. <br>Various companies realised the value in Linux and cashed in with significant resources to advance the kernel. Besides the large amounts of code contributed every release, other investments are in the form of cash donations to support developers and hardware donations to facilitate driver development. Formerly known as The Open Source Development Lab in 2000, The Linux Foundation has Linus Torvalds working full-time on their behalf developping the kernel. Among it&rsquo;s goals were promoting open source projects and accelerating their commercial adoption.</p>
+			</div>
+		</div>
+
+
+		<div class="chapter five">
+			<img src="media/Ubuntu_Logo.svg" alt="Canonical's Ubuntu" class="media header" loading="lazy"/>
+			<div class="windowfour hidden">
+				<div class="txtcontent two">
+
+					<div class="windowfour hidden">
+						<img src="media/ubuntu.png" alt="Ubuntu 4.10 (Warty Warthog)" class="media one hidden" loading="lazy" />
+					</div>
+
+					<p>2004 saw the first release of Ubuntu, one of most popular Linux distributions. Many users first exposure to Linux is through Ubuntu due to it's ease of use and strong community support.</p>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="chapter six">
+			<img src="media/androidlogo.svg" alt="Android Logo (2007-2014)" class="media header" loading="lazy"/>
+			<div class="windowfive hidden">
+				<div class="txtcontent three">
+					
+					<div class="windowfive left hidden">
+						<img src="media/htc-dream.png" alt="HTC Dream running Android 1" class="media one left hidden" loading="lazy" />
+					</div>
+
+					<p>n 2005, Google acquired Android Inc. They later introduced the first Android phone with HTC Dream
+						in 2008 with Android 1.0 running on Linux.</p>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="chapter one">
+			<h1 class="media header">Microsoft</h1>
+			<div class="txtcontent one hidden">
+				<p><span class="usr">~$: </span>less chapter6</p><br>
+				<p>s Linux gained more support from bigger companies such as IBM, Dell, Hewlett-Packard, Compaq, Oracle and Red Hat, As well as seeing wider use and adoption in general, some parties at Microsoft felt threatened. In an internal Microsoft memo that was leaked in 1998, and later confirmed authentic by Microsoft, it discussed ways of competing with open source software. The memo suggests that one way in which open projects have seen wide adoption in the server market is through the use of standarized protocols, such protocols allow portability and freedom to chose or create different implementations of the same functionality. Vinod Valloppillil, the program manager at Microsoft who authored the memo suggests that open source software's flexibility in this domain can be combatted through extending the protocols, adding new protocols and lastly de-commoditizing said protocols and applications. Internally this policy has been nicked &quot;Embrace, Extend, Extinguish&quot; In 2009, Linux contributor Stephen Hemminger discovered GPL-Licensed open source bits of code used in breach of the GPL Licence by Microsoft in their Hyper-V network driver. Miscrosoft later contributed the code to the kernel after being compelled by Stephen to avoid legal action.</p>
+			</div>
+		</div>
+
+		<div class="chapter one">
+			<h1 class="media header">Currently</h1>
+			<div class="txtcontent one hidden">
+				<p><span class="usr">~$: </span>less chapter7</p><br>
+				<p>What began as a hobby project for Linus Torvalds in 1991, has now grown beyond anyone&rsquo;s expectations at the time. Linux today makes up for a large portion of the software driving the world; In 2012, Red Hat became the first billion dollar open source company, pushing Linux to the buisness IT world as a commercial product. According to the Linux Foundation, in February 2015 over 80% of Linux kernel developers were paid.</p>
+				
+				<img src="media/lf-members.png" alt="An Incomplete Number of The Linux Foundation Member Companies" loading="lazy" class="media zero right hidden" />
+
+				<img src="media/websites.png" alt="Distribution of Linux-powered websites by Global Ranking - Enterprise Apps Today" loading="lazy" class="media zero left hidden" />
+
+				<p>Linux was originally intended for desktop use. In reality, it thrives in almost every other domain but the desktop. In general, Linux makes up about 2% of the personal computer OS market share, behind MacOS and Windows. For developers however, 47% use Linux in their machines. (Statista) Linux capabilities account for 39.2% of websites whose operating systems are known. (W3Techs) It is also the operating system of all the world&rsquo;s fastest supercomputers. (Blackdown) And comprises 96.3% of The top 1,000,000 web servers use Linux. (ZDNet)</p>
 			</div>
 		</div>
 
