Fixed index page, disabled Others page

--- a/index.html
+++ b/index.html
@@ -24,28 +24,29 @@
             <li class="navoption win"><a href="win/win.html"><img src="win_white.png" alt="Windows Logo"></a></li>
             <li class="navoption mac"><a href="macos/macos.html"><img src="macos_light.png" alt="MacOS Logo"></a></li>
             <li class="navoption"><a href="linux/linux.html"><img src="linux.png" alt="Linux Logo"></a></li>
-            <li class="navoption others"><a href="other/other.html"><img src="amiga2.png" alt="AmigaOS Logo"></a></li>
+            <!--<li class="navoption others"><a href="other/other.html"><img src="amiga2.png" alt="AmigaOS Logo"></a></li>-->
             <li><button id="themebttn" onclick="toggleTheme()"></button></li>
         </ul>
     </nav>
 
-    <h1 class="hidden">Project Krono‿OS</h1>
+    <h1 class="hidden">Krono‿OS</h1>
 
     <div class="infobox hidden">
         <p>Interactive Encyclopedia through the history of Personal Computer Operating Systems, touching on the three major players :<br>
         Microsoft Windows, Apple Mac OS and GNU/Linux.
         </p><br>
-        <h2>MADE BY</h2>
-        <ul>
-            <li>GRAOUI Abderrahmane</li>
-            <li>ELYAZIDI Tarik</li>
-            <li>ETTAOUYL Siham</li>
-            <li>EZZANATY Assmae</li>
-        </ul>
     </div>
 
+        <a class="infobox win left hidden" href="win/win.html">Windows</a>
+
+        <a class="infobox mac left hidden" href="macos/macos.html">macOS</a>
+
+        <a class="infobox linux left hidden" href="linux/linux.html">Linux</a>
+
+        <div class="infobox other left hidden"></div>
+
     <footer>
-        <p>2023 (c) Copyright LOLOLOLOLOLOLOLOL</p>
+        <p>2023</p>
     </footer>
 </body>
 
