--- a/win/win.html
+++ b/win/win.html
@@ -24,7 +24,7 @@
 				<li class="navoption win"><a href=""><img src="win_white.png" alt="Windows Logo"></a></li>
 				<li class="navoption mac"><a href="../macos/macos.html"><img src="macos_light.png" alt="MacOS Logo"></a></li>
 				<li class="navoption"><a href="../linux/linux.html"><img src="linux.png" alt="Linux Logo"></a></li>
-				<li class="navoption others"><a href="../other/other.html"><img src="amiga2.png" alt="AmigaOS Logo"></a></li>
+				<!--<li class="navoption others"><a href="other/other.html"><img src="amiga2.png" alt="AmigaOS Logo"></a></li>-->
 				<li><button id="themebttn" onclick="toggleTheme()"></button></li>
 			</ul>
 		</nav>
