Added Linux button

--- a/linux/linux.html
+++ b/linux/linux.html
@@ -246,6 +246,7 @@
 
 					<p>2004 saw the first release of Ubuntu, one of most popular Linux distributions. Many users first exposure to Linux is through Ubuntu due to it's ease of use and strong community support.</p>
 
+					<button type="button" class="media hidden right"><a href="https://malisipi.github.io/ubuntu-tour/" target="_blank">Try Ubuntu!</a></button>
 				</div>
 			</div>
 		</div>
