--- a/macos/macos.html
+++ b/macos/macos.html
@@ -24,7 +24,7 @@
 				<li class="navoption win"><a href="../win/win.html"><img src="win_white.png" alt="Windows Logo"></a></li>
 				<li class="navoption mac"><a href=""><img src="macos_light.png" alt="MacOS Logo"></a></li>
 				<li class="navoption"><a href="../linux/linux.html"><img src="linux.png" alt="Linux Logo"></a></li>
-			<!--<li class="navoption others"><a href="other/other.html"><img src="amiga2.png" alt="AmigaOS Logo"></a></li>-->
+				<li class="navoption others"><a href="other/other.html"><img src="amiga2.png" alt="AmigaOS Logo"></a></li>
 				<button id="themebttn" onclick="toggleTheme()"></button>
 			</ul>
 		</nav>
@@ -481,6 +481,8 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="chapter seven gennineteen"></div>
 
 		<div class="popup blur">
 			<span>&times;</span>
