Added Quiz logic, buggy

--- a/macos/macos.html
+++ b/macos/macos.html
@@ -56,10 +56,16 @@
 					<p>~ Steve Jobs on the unveiling of the Macintosh</p>
 				</div>
 
-				<video class="media hidden center zero" loading="lazy" controls>
-					<source src="media/1984.mp4" type="video/mp4">
-					Your browser does not support video!
-				</video>
+				<div class="locked">
+					<video class="media hidden center zero" loading="lazy" controls>
+						<source src="media/1984.mp4" type="video/mp4">
+						Your browser does not support video!
+					</video>
+					<div class="quiz" id="quiz-1">
+						<h2>Answer correctly to unlock</h2>
+						<div id="question-1"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 
@@ -182,7 +188,13 @@
 				<p><br><br><br><br><br><br>
 				Many Apple customers bought Mac OS 8 &ldquo;To keep the company afloat&rdquo;, some prominent pirate groups refused to redistribute the software in solidarity.</p>
 
-				<img src="media/billthx.jpg" class="media right hidden six" loading="lazy" />  
+				<div class="locked right">
+					<img src="media/billthx.jpg" class="media right hidden six" loading="lazy" />
+					<div class="quiz" id="quiz-2">
+						<h2>Answer correctly to unlock</h2>
+						<div id="question-2"></div>
+					</div>
+				</div>
 
 				<p>and even Microsoft, Apple's main competitor and nemesis, stepped in and injected 150 million USD of much needed funding. In exchange for non-voting stocks, and an assurance that the Redmond company will support its Office line of products on Mac.</p>
 
@@ -450,7 +462,7 @@
 					<p>macOS Big Sur was announced during the WWDC keynote speech on June 22, 2020, and it was made available to the general public on November 12, 2020. <br>
 						This is the first time the major version number of the operating system has been incremented since the Mac OS X Public Beta in 2000. It brings ARM support for the new Apple Silicon Macs, new icons, and aesthetic user interface changes to the system.
 						</p>
-					<button type="button" class="media hidden right"><a href="https://macos-big-sur-clone.vercel.app/" target="_blank">Try macOS Big Sur!</a></button>
+					<button id="DEbutton" type="button" class="media hidden right"><a href="https://macos-big-sur-clone.vercel.app/" target="_blank">Try macOS Big Sur!</a></button>
 				</div>
 			</div>
 		</div>
