--- a/win/win.html
+++ b/win/win.html
@@ -52,8 +52,15 @@
 				<p>Microsoft, founded in 1975 by Paul Allen and a very young Bill Gates, found success selling their own BASIC Language interpreters for the Altair 8800, when IBM came knocking on their door, Gates cleared his schedule immediately and signed a contract with IBM to provide a suite of software, and an operating system. Microsoft do not have an Operating System.</p>
 				<p><br>Bill&rsquo;s business ingenuity secured the non-exclusive full rights to Seattle Computers 86-DOS OS, which became the MS-DOS powering the now called IBM Personal Computer product line.</p>
 				<h2 class="middle"><br>The PC.<br></h2>
-				<img src="media/ibm-pc-5150-print-ad.jpg" alt="IBM PC 5150 Ad" class="media hidden center zero" loading="lazy"/>
 				
+				<div class="locked">
+					<img src="media/ibm-pc-5150-print-ad.jpg" alt="IBM PC 5150 Ad" class="media hidden center zero" loading="lazy"/>
+					<div class="quiz" id="quiz-1">
+						<h2>Answer correctly to unlock</h2>
+						<div id="question-1"></div>
+					</div>
+				</div>
+
 				<p>Released in 1981, the Intel 8088-powered PC was a smashing success launching both IBM and Microsoft to market dominance. Efforts to reverse-engineer the closed IBM BIOS let to the explosion of &ldquo;IBM PC-Compatibles&rdquo;, which Microsoft capitalized on with its non-exclusive agreement with IBM to sell their software to those devices as well. Tightening their grip on the software world.</p>
 				<img src="media/5150MB.jpg" alt="IBM PC 5150 motherboard" class="media hidden right zero" loading="lazy"/>
 
@@ -189,10 +196,10 @@
 
 				<p>While not bundled on release, Microsoft introduced Internet Explorer following the pressure made by the emerging Netscape Navigator. This move was indicative of the growing importance of the internet and set the stage for Microsoft's subsequent dominance in the web browser market.</p>
 
-				<video class="media hidden right three" loading="lazy" controls>
-					<source src="media/win95_2.mp4" type="video/mp4"/>
-					Your browser does not support videos!
-				</video>
+					<video class="media hidden three" loading="lazy" controls>
+						<source src="media/win95_2.mp4" type="video/mp4"/>
+						Your browser does not support videos!
+					</video>
 
 				<p>The operating system also included built-in support for multimedia features such as CD-ROM drives, sound cards, and video playback. It also introduced DirectX, a collection of APIs (that is, Application Programming Interfaces) designed to handle multimedia tasks, particularly gaming. DirectX played a crucial role in standardizing game development on Windows, leading to the platform's dominance in the gaming industry. With Microsoft using its power and wealth to fund and partner with many studios, it made sure Windows, is the only platform for gaming.</p>
 
@@ -201,7 +208,13 @@
 
 				<p>Windows 95 was a commercial juggernaut. Within just four days of its release, Microsoft sold over seven million copies. This success was unprecedented, and it significantly outpaced sales of any previous operating system. To put this into perspective, it even outperformed the highly popular video game Doom, which had set records in the gaming industry.</p>
 
-				<iframe width="685" height="514" src="https://www.youtube.com/embed/ZBbvmORcgSo" title="The Computer Chronicles - Windows 95 (1995)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="media hidden center three"></iframe>
+				<div class="locked right">
+					<iframe width="685" height="514" src="https://www.youtube.com/embed/ZBbvmORcgSo" title="The Computer Chronicles - Windows 95 (1995)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="media hidden three"></iframe>
+					<div class="quiz" id="quiz-2">
+						<h2>Answer correctly to unlock</h2>
+						<div id="question-2"></div>
+					</div>
+				</div>
 
 				<p>Windows became THE operating system for the PC. And the tech giant became terrifyingly&#8230;unstoppable.<br>
 					Microsoft has fallen into legal scrutiny in the 90&rsquo;s. With the U.S. Department of Justice (DOJ) investigating the giant for antitrust violations, with its controversial EEE strategy (Embrace. Extend. Extinguish). This investigation would lead to a landmark antitrust case against Microsoft in the late 1990s.<br>
@@ -303,13 +316,15 @@
 				Throughout its lifecycle, Windows XP received several updates and service packs. Service Pack 1 (SP1) and Service Pack 2 (SP2) were particularly notable, introducing major security enhancements and features like Windows Firewall. These updates aimed to address vulnerabilities, improve system performance, and enhance overall functionality.<br>
 				</p>
 
+				
+
 				<img src="media/winxptimeline.png" class="media hidden center five" loading="lazy"/>
 
 				<p>
 					Despite its success, Windows XP faced challenges as it continued to be widely used even after Microsoft officially ended mainstream support in 2009 and extended support in 2014. This prolonged use posed security risks, as Microsoft ceased to provide regular security updates. The end of life for Windows XP brought attention to the importance of transitioning to more secure and supported operating systems.<br>
 				</p>
 
-				<button type="button" class="media hidden right"><a href="https://xp-js.glitch.me/" target="_blank">Try Windows XP!</a></button>
+				<button type="button" id="DEbutton" class="media hidden right"><a href="https://xp-js.glitch.me/" target="_blank">Try Windows XP!</a></button>
 
 				<p>The reluctance of some users and organizations to upgrade from Windows XP became evident during the WannaCry ransomware attack in May 2017. Exploiting vulnerabilities in unpatched systems, the attack affected numerous computers worldwide. This incident highlighted the security risks associated with using outdated software and the imperative of keeping operating systems up-to-date. Microsoft responded by releasing emergency patches for unsupported versions, including Windows XP, underscoring the severity of the situation and the potential consequences of delayed upgrades.</p>
 
