Less quiz till bugfix

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <a class="infobox linux left hidden" href="linux/linux.html">Linux</a>
 
-        <div class="infobox other left hidden"></div>
+        <a class="infobox other left hidden" href="linux/linux.html">Other OS</a>
 
     <footer>
         <p>2023</p>
