--- a/win/win.html
+++ b/win/win.html
@@ -170,7 +170,7 @@
 		</div>
 
 		<div class="chapter three">
-			<img src="media/win95.svg" alt="Windows 95 logo" lass="media hidden header" loading="lazy"/>
+			<img src="media/win95.svg" alt="Windows 95 logo" class="media hidden header" loading="lazy"/>
 
 			<div class="txtcontent hidden three">
 				<h2>Microsoft Windows 95</h2>
